show cube use three.js

--- a/rundriver/www/index.html
+++ b/rundriver/www/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <title>Go Wasm 3D Game</title>
 <script src="/three.min.js"></script>
-<script src="wasm_exec.js"></script>
+<script src="/wasm_exec.js"></script>
 <script>
     function initPage() {
       const go = new Go();
@@ -17,7 +17,7 @@
 
 <body id="body" style="margin:0; padding:0;" onload="initPage()">
 
-<canvas id="canvas3d" tabindex="1" width="1" height="1"></canvas>
+<!-- <canvas id="canvas3d" tabindex="1" width="1" height="1"></canvas> -->
 <div id="sysmsg">System Message area</div>
 <div id="serviceinfo">ServiceInfo area</div>
 
