--- a/rundriver/www/index.html
+++ b/rundriver/www/index.html
@@ -14,12 +14,9 @@
     }
 </script>
 </head>
-
 <body id="body" style="margin:0; padding:0;" onload="initPage()">
-
-<!-- <canvas id="canvas3d" tabindex="1" width="1" height="1"></canvas> -->
+<span id="canvas3d"></span>
 <div id="sysmsg">System Message area</div>
 <div id="serviceinfo">ServiceInfo area</div>
-
 </body>
 </html>
