update show info

--- a/rundriver/www/index.html
+++ b/rundriver/www/index.html
@@ -16,7 +16,9 @@
 </head>
 <body id="body" style="margin:0; padding:0;" onload="initPage()">
 <span id="canvas3d"></span>
-<div id="sysmsg">System Message area</div>
 <div id="serviceinfo">ServiceInfo area</div>
+<div id="debuginfo">debug info area</div>
+<div id="teamstatsinfo">team stats area</div>
+<div id="sysmsg">System Message area</div>
 </body>
 </html>
