--- a/rundriver/clientdata/index.html
+++ b/rundriver/clientdata/index.html
@@ -178,11 +178,7 @@
 
 <span id="titleform">
 	<span>
-	스마트폰 앱을 실행한 당신은 빛에 싸인 후 이계에 소환된것을 알게 되었다.<br/>
-	소환된 세계에서 살아남기위해 대륙의 세력 전쟁에 끼어들게 된다. <br/>
-	당신의 가문을 만들고 대를 이어 가문을 번영시켜야한다. <br/>
-	최고의 자리를 노리는, 가문과 가문의 피로 얽힌 복수의 끝없는 반복속에서<br/>
-	전쟁에 승리하여 대륙 최고의 황제자리에 오를 수 있을 것인가?<br/>
+	게임 인트로<br/>
 	</span>
 	Player name:
 	<input type="text" style="font-size:20px;" id="nickname" value="Unnamed" autofocus size=20 maxlength=20>
