fix canvas3d make

--- a/rundriver/clientdata/index.html
+++ b/rundriver/clientdata/index.html
@@ -174,7 +174,7 @@
 
 <div id="loadmsg" style="font-size:60pt;">Loading Go Wasm 3d game, plaeae wait</div>
 
-<span id="canvas3d" tabindex="1" width="1" height="1"></span>
+<span id="canvas3dholder" tabindex="1" width="1" height="1"></span>
 
 <span id="titleform">
 	<span>
