not fixed key,mouse event handle

--- a/rundriver/clientdata/index.html
+++ b/rundriver/clientdata/index.html
@@ -174,7 +174,7 @@
 
 <div id="loadmsg" style="font-size:60pt;">Loading Go Wasm 3d game, plaeae wait</div>
 
-<span id="canvas3dholder" tabindex="1" width="1" height="1"></span>
+<span id="canvas3dholder" ></span>
 
 <span id="titleform">
 	<span>
@@ -182,7 +182,7 @@
 	</span>
 	Player name:
 	<input type="text" style="font-size:20px;" id="nickname" value="Unnamed" autofocus size=20 maxlength=20>
-	<button type="button" style="font-size:20px;" onclick="enterField()">Enter FieldWar</button>
+	<button type="button" style="font-size:20px;" onclick="enterGame()">Enter Go Wasm 3d game</button>
 	<button type="button" style="font-size:20px;" onclick="clearNickname()">Clear Memory</button>
 </span>
 
