show stage list in client

--- a/rundriver/clientdata/index.html
+++ b/rundriver/clientdata/index.html
@@ -184,6 +184,7 @@
 	<input type="text" style="font-size:20px;" id="nickname" value="Unnamed" autofocus size=20 maxlength=20>
 	<button type="button" style="font-size:20px;" onclick="enterGame()">Enter Go Wasm 3d game</button>
 	<button type="button" style="font-size:20px;" onclick="clearNickname()">Clear Memory</button>
+	<div id="stagelist"></div>
 </span>
 
 <div id="cmdrow" style="position: fixed; bottom: 0; left: 0;display: none;color:gray;">
